--- a/RazorComponentResultRnD/DocumentComponent.razor
+++ b/RazorComponentResultRnD/DocumentComponent.razor
@@ -1,11 +1,13 @@
-<html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width =device-width, initial-scale=1.0">
+    @* <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous"> *@
     <script src="https://unpkg.com/htmx.org@2.0.0" integrity="sha384-wS5l5IKJBvK6sPTKa2WZ1js3d947pvWXbPJ1OmWfEuxLgeHcEbjUUA5i9V5ZkpCw" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/htmx.org/dist/ext/json-enc.js"></script>
+    <title>To Do</title>
 </head>
-<body hx-get="/todos" hx-trigger="load" hx-swap="innerHTML">
+<body hx-get="/todos" hx-trigger="load" hx-swap="innerHTML" class="bg-light">
 </body>
 </html>
 @code {
